Update ‘auto-x’ strings to ‘x’

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <title>X — Javascript library with interesting features</title>
     <meta name="description" content="Small and simple Javascript library with interesting features"/>
-    <link rel="shortcut icon" href="https://andreyshpigunov.github.io/auto-x/favicon.ico"/>
-    <link rel="icon" href="https://andreyshpigunov.github.io/auto-x/favicon.svg" type="image/svg+xml"/>
+    <link rel="shortcut icon" href="https://andreyshpigunov.github.io/x/favicon.ico"/>
+    <link rel="icon" href="https://andreyshpigunov.github.io/x/favicon.svg" type="image/svg+xml"/>
     <link rel="apple-touch-icon" href="https://andreyshpigunov.github.io/auto/assets/apple-touch-icon.png"/>
     <link rel="stylesheet" href="dist/app.css"/>
 </head>
@@ -21,11 +21,11 @@
         <div class="header-version nowrap">1.0.0 β</div>
         <div class="header-logo mxa">
             <a role="button" data-scrollto="top">
-                <img src="assets/logo.png" alt="Auto-X"/>
+                <img src="assets/logo.png" alt="x"/>
             </a>
         </div>
         <div class="header-github">
-            <a href="https://github.com/andreyshpigunov/auto-x" target="_blank"></a>
+            <a href="https://github.com/andreyshpigunov/x" target="_blank"></a>
         </div>
     </header>
     
@@ -132,11 +132,11 @@
             <h3>NPM</h3>
             <p>Install package in project folder:</p>
             <div class="codeBlock">
-                <code>$ npm i auto-x</code>
+                <code>$ npm i x</code>
             </div>
             <p>Import module in app.js:</p>
             <div class="codeBlock">
-                <code>import { x } from 'auto-x';</code>
+                <code>import { x } from 'x';</code>
                 <code>x.init();</code>
             </div>
             <p>Best way to connect styles, download them from CDN and import manually in app.css:</p>
@@ -148,18 +148,18 @@
             <h3>CDN links</h3>
             <p class="breakWord">
                 Latest release:<br/>
-                <a href="https://cdn.jsdelivr.net/gh/andreyshpigunov/auto-x@1.0.0/dist/x.css">https://cdn.jsdelivr.net/gh/andreyshpigunov/auto-x@1.0.0/dist/x.css</a><br/>
-                <a href="https://cdn.jsdelivr.net/gh/andreyshpigunov/auto-x@1.0.0/dist/x.js">https://cdn.jsdelivr.net/gh/andreyshpigunov/auto-x@1.0.0/dist/x.js</a>
+                <a href="https://cdn.jsdelivr.net/gh/andreyshpigunov/x@1.0.0/dist/x.css">https://cdn.jsdelivr.net/gh/andreyshpigunov/x@1.0.0/dist/x.css</a><br/>
+                <a href="https://cdn.jsdelivr.net/gh/andreyshpigunov/x@1.0.0/dist/x.js">https://cdn.jsdelivr.net/gh/andreyshpigunov/x@1.0.0/dist/x.js</a>
             </p>
             <p class="breakWord">
                 Latest build:<br/>
-                <a href="https://cdn.jsdelivr.net/gh/andreyshpigunov/auto-x@latest/dist/x.css">https://cdn.jsdelivr.net/gh/andreyshpigunov/auto-x@latest/dist/x.css</a><br/>
-                <a href="https://cdn.jsdelivr.net/gh/andreyshpigunov/auto-x@latest/dist/x.js">https://cdn.jsdelivr.net/gh/andreyshpigunov/auto-x@latest/dist/x.js</a>
+                <a href="https://cdn.jsdelivr.net/gh/andreyshpigunov/x@latest/dist/x.css">https://cdn.jsdelivr.net/gh/andreyshpigunov/x@latest/dist/x.css</a><br/>
+                <a href="https://cdn.jsdelivr.net/gh/andreyshpigunov/x@latest/dist/x.js">https://cdn.jsdelivr.net/gh/andreyshpigunov/x@latest/dist/x.js</a>
             </p>
             
             <hr class="my7"/>
             <h3>Project on GitHub</h3>
-            <p><a href="https://github.com/andreyshpigunov/auto-x">https://github.com/andreyshpigunov/auto-x</a></p>
+            <p><a href="https://github.com/andreyshpigunov/x">https://github.com/andreyshpigunov/x</a></p>
             <hr class="my7"/>
         </div>
     </section>
