--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 }'>
 
     <header class="header flex aic sticky">
-        <div class="header-version nowrap">1.0.0 β</div>
+        <div class="header-version nowrap">0.0.2</div>
         <div class="header-logo mxa">
             <a role="button" data-scrollto="top">
                 <img src="assets/logo.png" alt="x"/>
