Fixed npm i path

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
             <h3>NPM</h3>
             <p>Install package in project folder:</p>
             <div class="codeBlock">
-                <code>$ npm i x</code>
+                <code>$ npm i @andreyshpigunov/x</code>
             </div>
             <p>Import module in app.js:</p>
             <div class="codeBlock">
