Fixed import path

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
             </div>
             <p>Import module in app.js:</p>
             <div class="codeBlock">
-                <code>import { x } from 'x';</code>
+                <code>import { x } from '@andreyshpigunov/x';</code>
                 <code>x.init();</code>
             </div>
             <p>Best way to connect styles, download them from CDN and import manually in app.css:</p>
