--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     
     <section class="section-content mt7">
         <div class="container max1200">
-            <div class="grid g4 gap6">
+            <div class="grid g4 md:g2 sm:g1 gap6">
                 <div class="c1">
                     <h5>Animate</h5>
                     <div x-animate='{
