--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 </div>
                 <div class="c1">
                     <h5>Device</h5>
-                    <div class="jsDeviceExample breakWord"></div>
+                    <pre class="jsDeviceExample breakWord"></pre>
                 </div>
                 <div class="c1">
                     <h5>Slides</h5>
