--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
     "end": "-50vh",
     "functionName": "headerAnimation"
 }'>
+    <div id="a"></div>
+    <script>
+        document.getElementById('a').innerHTML = window.navigator.userAgent
+    </script>
     
     <header class="header flex aic sticky">
         <div class="header-version nowrap">0.0.42</div>
