--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     "functionName": "headerAnimation"
 }'>
     <header class="header flex aic sticky px5">
-        <div class="header-version nowrap">0.0.59</div>
+        <div class="header-version nowrap">0.0.60</div>
         <div class="header-logo mxa">
             <a role="button" data-scrollto="#top">
                 <img src="assets/logo.png" alt="x"/>
@@ -158,7 +158,7 @@
                         <input class="max160" type="text" name="exampleText" placeholder="Type something"/>
                         <span class="jsExampleTextValue m2">...</span>
                     </div>
-                    <div>Calculator</div>
+                    <div>Simple calculator</div>
                     <div class="my2">
                         <input class="max40 ac" name="exampleVal1" type="text" value="2" maxlength="1" pattern="[0-9]{1}"/> +
                         <input class="max40 ac" name="exampleVal2" type="text" value="2" maxlength="1" pattern="[0-9]{1}"/> =
