--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     "functionName": "headerAnimation"
 }'>
   <header class="header flex aic sticky px5 m:px6 l:px8">
-    <div class="header-version nowrap">0.0.66</div>
+    <div class="header-version nowrap">0.0.67</div>
     <div class="header-logo mxa">
       <a role="button" data-scrollto="#top">
         <img src="assets/logo.png" alt="x" />
@@ -421,7 +421,7 @@
             <p>He first went to Europe, where he visited many countries. He saw the Eiffel Tower in Paris, the Coliseum in Rome, and the canals of Venice. He also tried local food and drinks, which were very delicious.</p>
             <p>After Europe, John went to Asia. There he explored the temples of India, the Great Wall of China, and the rice fields of Japan. He learned about different cultures and religions, which made him more open-minded.</p>
             <p>Finally, John came back home, but he knew that he would soon go on another adventure. His travels had given him a lot of new experiences and knowledge, and he was ready for more.</p>
-            <div class="flex gap3">
+            <div class="flex gap3 mt6">
               <a role="button" class="button modal-close">Close</a>
               <a role="button" class="button" x-modal-open="modalExampleInModal">Modal in modal</a>
               <a role="button" class="button" x-modal-open="modalExampleUniq">Unique modal</a>
@@ -918,7 +918,6 @@ a.pseudo</pre>
 .h[1-6]
 .mono
 .italic
-.fs[1-9]   step 1 (xs,m,l,xl)  - size in spaces
 .fs[10-19] step 1 (xs,m,l,xl)  - size in px
 .fs[20-80] step 2 (xs,m,l,xl)  - size in px
 .fw[100-900] step 100 (xs,m,l,xl)
@@ -992,7 +991,6 @@ a.pseudo</pre>
 --forms-background-color-readonly: #fafafa;
 --forms-background-color-disabled: #f6f6f6;</pre>
   </div>
-
 
 
   <div id="modalButtons" x-modal class="modal_hash" data-window-class="max1000">
