--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     "functionName": "headerAnimation"
 }'>
   <header class="header flex aic sticky px5 m:px6 l:px8">
-    <div class="header-version nowrap">0.0.67</div>
+    <div class="header-version nowrap">0.0.68</div>
     <div class="header-logo mxa">
       <a role="button" data-scrollto="#top">
         <img src="assets/logo.png" alt="x" />
@@ -1152,8 +1152,8 @@ a.pseudo</pre>
 .hidden =(xs-s,m,l-xl)
 .hiddenNext =(xs-s,m,l-xl)
 
-.maxw (xs,m,l,xl) | max width
-.maxh (xs,m,l,xl) | max height
+.fulscreen | min width and min height 100vw/vh
+
 .max (xs,m,l,xl)  | max width 100%
 
 .w[10-190] step 10 (xs,m,l,xl) | width
