--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     "functionName": "headerAnimation"
 }'>
   <header class="header flex aic sticky px5 m:px6 l:px8">
-    <div class="header-version nowrap">0.0.67</div>
+    <div class="header-version nowrap">0.0.68</div>
     <div class="header-logo mxa">
       <a role="button" data-scrollto="#top">
         <img src="assets/logo.png" alt="x" />
@@ -851,7 +851,8 @@
     <pre class="fs14 mono">
 --line-height: 1.5;
 --font-color: #000;
---font-size: 16px;
+--font-size-coeff: 62.5%;
+--font-size: 1.6rem;
 --font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol;
 --font-family-mono: SFMono-Regular, Consolas, Liberation Mono, Menlo, monospace;
 --background-color: #fff;</pre>
@@ -861,20 +862,24 @@
   <div id="modalSpaces" x-modal class="modal_hash" data-window-class="max1000">
     <h2>Spaces</h2>
     <p>Global spaces.</p>
+    <p class="fs12">
+      1rem = 10px by default (16px * var(--font-size-coeff)<br/>
+      16px - default font size in most browsers
+    </p>
     
     <h3>Variables</h3>
     <pre class="fs14 mono">
 --space-0:  0;
---space-1:  0.25rem;
---space-2:  0.5rem;
---space-3:  0.75rem;
---space-4:  1rem;
---space-5:  1.5rem;
---space-6:  2rem;
---space-7:  3rem;
---space-8:  4rem;
---space-9:  6rem;
---space-10: 8rem;</pre>
+--space-1:  0.4rem;
+--space-2:  0.8rem;
+--space-3:  1.2rem;
+--space-4:  1.6rem;
+--space-5:  2.4rem;
+--space-6:  3.2rem;
+--space-7:  4.8rem;
+--space-8:  6.4rem;
+--space-9:  9.6rem;
+--space-10: 12.8rem;</pre>
   </div>
 
 
@@ -895,7 +900,7 @@ a.pseudo</pre>
 --link-decoration: underline;
 --link-border-style: solid;
 --link-underline-offset: .25em;
---link-underline-thickness: .0625em;
+--link-underline-thickness: .075em;
 
 --link-color: #0060bb;
 --link-border-color: #0060bb44;
@@ -918,26 +923,26 @@ a.pseudo</pre>
 .h[1-6]
 .mono
 .italic
-.fs[10-19] step 1 (xs,m,l,xl)  - size in px
-.fs[20-80] step 2 (xs,m,l,xl)  - size in px
+.fs[10-19] step 1 (xs,m,l,xl) - size in rem - 1.0, 1.1, 1.2, ..., 1.9
+.fs[20-80] step 2 (xs,m,l,xl) - size in rem - 2.0, 2.2, 2.4, ..., 8.0
 .fw[100-900] step 100 (xs,m,l,xl)
 .ls[0-4] (xs,m,l)
 .lh[0-9] (xs,m,l)  - values: 1.0-1.9</pre>
     
     <h3>Variables</h3>
     <pre class="fs14 mono">
---headers-margin-top: 1.125em;
---headers-margin-bottom: .625em;
+--headers-margin-top: 1em;
+--headers-margin-bottom: .75em;
 --headers-font-family: var(--font-family);
 --headers-font-weight: 700;
 --headers-font-color: var(--font-color);
 
 --h1-font-size: 2.5em;
---h2-font-size: 2em;
+--h2-font-size: 2.0em;
 --h3-font-size: 1.5em;
 --h4-font-size: 1.25em;
---h5-font-size: 1em;
---h6-font-size: 1em;
+--h5-font-size: 1.125em;
+--h6-font-size: 1.0em;
 
 --h1-line-height: 1.3;
 --h2-line-height: 1.4;
@@ -951,7 +956,7 @@ a.pseudo</pre>
 
 --blockquote-margin: 2em 0;
 --blockquote-padding: 1em 2em;
---blockquote-border: solid .25em var(--font-color);
+--blockquote-border: solid .2em var(--font-color);
 
 --table-padding: .5em .75em;
 --table-border: 1px solid #ccc;
@@ -970,8 +975,8 @@ a.pseudo</pre>
     <h3>Variables</h3>
     <pre class="fs14 mono">
 --forms-width: 400px;
---forms-height: 2.5rem;
---forms-side-padding: 0.625rem;
+--forms-height: 4rem;
+--forms-side-padding: 1rem;
 
 --forms-font-size: var(--font-size);
 --forms-font-color: #000;
@@ -979,8 +984,8 @@ a.pseudo</pre>
 --forms-font-color-disabled: #666;
 --forms-font-color-placeholder: #ccc;
 
---forms-border-width: .0625em;
---forms-border-radius: 0.5rem;
+--forms-border-width: .16rem;
+--forms-border-radius: .8rem;
 --forms-border-color: #ddd;
 --forms-border-color-focused: #8cf;
 --forms-border-color-error: #f00;
@@ -1012,14 +1017,13 @@ a.pseudo</pre>
 .button_black</pre>
   
   <h3>Variables</h3>
-  <pre class="fs14 mono">
-<span class="op4">/* Base styles */</span>
---button-height: 2.5rem;
---button-side-padding: 1.25rem;
+  <pre class="fs14 mono"><span class="op4">/* Base styles */</span>
+--button-height: 4rem;
+--button-side-padding: 2rem;
 --button-font-family: var(--font-family);
 --button-font-size: var(--font-size);
 --button-font-weight: 400;
---button-border-radius: 0.625rem;
+--button-border-radius: 1rem;
 --button-transition: all .1s ease-out;
 --button-disabled-opacity: .5;
 
@@ -1152,8 +1156,8 @@ a.pseudo</pre>
 .hidden =(xs-s,m,l-xl)
 .hiddenNext =(xs-s,m,l-xl)
 
-.maxw (xs,m,l,xl) | max width
-.maxh (xs,m,l,xl) | max height
+.fulscreen | min width and min height 100vw/vh
+
 .max (xs,m,l,xl)  | max width 100%
 
 .w[10-190] step 10 (xs,m,l,xl) | width
