--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   "functionName": "headerAnimation"
 }'>
   <header class="header flex aic sticky px5 m:px6 l:px8">
-    <div class="header-version nowrap">0.0.85</div>
+    <div class="header-version nowrap">0.0.86</div>
     <div class="header-logo mxa">
       <a role="button" x-scrollto="#top">
         <img src="assets/logo.png" alt="x" />
@@ -54,7 +54,25 @@
     <div class="element2-figure"></div>
   </div>
 
-
+  
+  
+  
+  <section class="section-header mt6 px5 m:px6 l:px8">
+    <h2 class="ac">Test buttons</h2>
+  </section>
+  
+  <section class="section-content mt7 px5 m:px6 l:px8">
+    <div class="container">
+      <div class="flex jcc gap4">
+        <a class="button button_large">a button</a>
+        <a class="button button_large" onclick="">a button onclick</a>
+        <a class="button button_large" href="#">a.href button</a>
+        <button class="button button_large">button</button>
+        <button class="button button_large onclick" onclick="">button</button>
+      </div>
+    </div>
+  </section>
+  
 
 
   <section class="section-header mt6 px5 m:px6 l:px8">
@@ -624,7 +642,7 @@
           <h5 class="pointer" x-modal-open="modalSheets">Sheets</h5>
           <style>
             .sheets-example .button {
-              opacity: .8
+              opacity: .6
             }
             .sheets-example .button.active {
               opacity: 1
