--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   "functionName": "headerAnimation"
 }'>
   <header class="header flex aic sticky px5 m:px6 l:px8">
-    <div class="header-version nowrap">0.0.87</div>
+    <div class="header-version nowrap">0.0.88</div>
     <div class="header-logo mxa">
       <a role="button" x-scrollto="#top">
         <img src="assets/logo.png" alt="x" />
@@ -65,9 +65,9 @@
     <div class="container">
       <div class="flex fc m:fr jcc gap4">
         <a class="button button_large">a button</a>
-        <a class="button button_large" onclick="return false">a button onclick</a>
+        <a class="button button_large" onclick="console.log('a button')">a button onclick</a>
         <button class="button button_large">button</button>
-        <button class="button button_large onclick" onclick="return false">button</button>
+        <button class="button button_large onclick" onclick="console.log('button button')">button</button>
       </div>
     </div>
   </section>
