--- a/index.html
+++ b/index.html
@@ -2,15 +2,15 @@
 <html lang="ru">
 
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no"/>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
   <title>X — Javascript library with interesting features</title>
-  <meta name="description" content="Small and simple Javascript library with interesting features" />
-  <link rel="shortcut icon" href="https://andreyshpigunov.github.io/x/favicon.ico" />
-  <link rel="icon" href="https://andreyshpigunov.github.io/x/favicon.svg" type="image/svg+xml" />
-  <link rel="apple-touch-icon" href="https://andreyshpigunov.github.io/x/assets/apple-touch-icon.png" />
-  <link rel="stylesheet" href="dist/app.css" />
+  <meta name="description" content="Small and simple Javascript library with interesting features"/>
+  <link rel="shortcut icon" href="https://andreyshpigunov.github.io/x/favicon.ico"/>
+  <link rel="icon" href="https://andreyshpigunov.github.io/x/favicon.svg" type="image/svg+xml"/>
+  <link rel="apple-touch-icon" href="https://andreyshpigunov.github.io/x/assets/apple-touch-icon.png"/>
+  <link rel="stylesheet" href="dist/app.css"/>
 </head>
 
 <body id="top" x-animate='{
@@ -19,7 +19,7 @@
   "functionName": "headerAnimation"
 }'>
   <header class="header flex aic sticky px5 m:px6 l:px8">
-    <div class="header-version nowrap">0.0.88</div>
+    <div class="header-version nowrap">0.0.89</div>
     <div class="header-logo mxa">
       <a role="button" x-scrollto="#top">
         <img src="assets/logo.png" alt="x" />
@@ -53,27 +53,8 @@
   }'>
     <div class="element2-figure"></div>
   </div>
-
   
   
-  
-  <section class="section-header mt6 px5 m:px6 l:px8">
-    <h2 class="ac">Test buttons</h2>
-  </section>
-  
-  <section class="section-content mt7 px5 m:px6 l:px8">
-    <div class="container">
-      <div class="flex fc m:fr jcc gap4">
-        <a class="button button_large">a button</a>
-        <a class="button button_large" onclick="console.log('a button')">a button onclick</a>
-        <button class="button button_large">button</button>
-        <button class="button button_large onclick" onclick="console.log('button button')">button</button>
-      </div>
-    </div>
-  </section>
-  
-
-
   <section class="section-header mt6 px5 m:px6 l:px8">
     <h2 class="ac">JS plugins</h2>
   </section>
